style: correct texts alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -849,7 +849,7 @@ body {
 }
 
 .final-cta-description {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 200;
     opacity: 0.9;
     color: #fff;
